tests/rosetta/out/Java/average-loop-length.error
javac error: exit status 1
/tmp/TestMochiToJavaaverage-loop-length3297799125/001/AverageLoopLength.java:13: error: incompatible types: double cannot be converted to String
        return Double.parseDouble(String.valueOf((Integer.parseInt(x))));
                                                                   ^
/tmp/TestMochiToJavaaverage-loop-length3297799125/001/AverageLoopLength.java:104: error: incompatible types: String cannot be converted to int
            int line = padInt(n, 3) + "  " + padFloat(a, 9) + "  " + padFloat(b, 12) + "  (" + padFloat(err, 6) + "%)";
                                                                                                                ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
